# yuxiaoman-ordersong

./: .editorconfig  .gitignore  CONTRIBUTING.md  LICENSE  README.md  nanoka-gi-achievement.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dev.yml  release.yml
config/default/: config.yaml
desktop-tauri/: .gitignore  README.md  package.json
desktop-tauri/scripts/: bundle-backend.mjs  clean-acl-cache.mjs  gen-icon.mjs  gen-nsis-images.mjs
desktop-tauri/src-tauri/: Cargo.toml  rustfmt.toml
desktop-tauri/src-tauri/crates/app/: Cargo.toml  build.rs  installer-hooks.nsh  tauri.conf.json
desktop-tauri/src-tauri/crates/app/capabilities/: main.json
desktop-tauri/src-tauri/crates/app/permissions/: config-file.toml  login-windows.toml
desktop-tauri/src-tauri/crates/app/src/: browser.rs  logger.rs  main.rs  tray.rs  webview_login.rs
desktop-tauri/src-tauri/crates/bili-open/: Cargo.toml
desktop-tauri/src-tauri/crates/bili-open/src/: client.rs  error.rs  lib.rs  sign.rs
desktop-tauri/src-tauri/crates/bili-passport/: Cargo.toml
desktop-tauri/src-tauri/crates/bili-passport/src/: lib.rs  qrcode.rs  whoami.rs
desktop-tauri/src-tauri/crates/bili-web/: Cargo.toml
desktop-tauri/src-tauri/crates/bili-web/src/: danmu_info.rs  lib.rs  room.rs  wbi.rs
desktop-tauri/src-tauri/crates/core/: Cargo.toml
desktop-tauri/src-tauri/crates/core/src/: config.rs  consts.rs  error.rs  lib.rs  paths.rs
desktop-tauri/src-tauri/crates/music/: Cargo.toml
desktop-tauri/src-tauri/crates/music/src/: lib.rs
desktop-tauri/src-tauri/crates/music/src/bili/: mod.rs
desktop-tauri/src-tauri/crates/music/src/netease/: client.rs  mod.rs  weapi.rs
desktop-tauri/src-tauri/crates/music/src/qq/: client.rs  mod.rs  toplist.rs
desktop-tauri/src-tauri/crates/server/: Cargo.toml
desktop-tauri/src-tauri/crates/server/src/: cache.rs  error.rs  health.rs  lib.rs  live_state.rs  metrics.rs  shared_config.rs  state.rs
desktop-tauri/src-tauri/crates/server/src/routes/: bili_music.rs  bili_open.rs  bili_passport.rs  bili_web.rs  mod.rs  netease.rs  qq.rs
docs/: ARCHITECTURE.md  HTTP-API.md
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.module.css  App.tsx  env.d.ts  main.tsx
frontend/src/api/: appConfig.ts  biliMusic.ts  biliOpen.ts  biliPassport.ts  biliWeb.ts  http.ts  liveState.ts  netease.ts  qq.ts
frontend/src/components/AudioBridge/: AudioBridge.tsx
frontend/src/components/BiliQrLogin/: BiliQrLogin.module.css  BiliQrLogin.tsx
frontend/src/components/ExitChoiceModal/: ExitChoiceModal.module.css  ExitChoiceModal.tsx
frontend/src/components/ListOverlay/: ListOverlay.module.css  ListOverlay.tsx
frontend/src/components/LyricView/: LyricView.module.css  LyricView.tsx
frontend/src/components/NowPlayingBar/: NowPlayingBar.module.css  NowPlayingBar.tsx
frontend/src/components/OnboardingModal/: OnboardingModal.module.css  OnboardingModal.tsx
frontend/src/components/OrderTable/: OrderTable.module.css  OrderTable.tsx
frontend/src/components/SettingsPanel/: AboutSection.tsx  DanmuSection.tsx  LoginSection.tsx  OrderSection.tsx  PrefsSection.tsx  SettingsPanel.module.css  SettingsPanel.tsx  StatsSection.tsx
frontend/src/components/StreamOverlay/: StreamOverlay.module.css  StreamOverlay.tsx
frontend/src/components/ThemeColorPicker/: ThemeColorPicker.module.css  ThemeColorPicker.tsx
frontend/src/components/Toast/: Toast.module.css  Toast.tsx
frontend/src/config/: env.ts
frontend/src/domain/danmu/: command.ts
frontend/src/domain/lyrics/: parser.ts
frontend/src/domain/order/: cooldown.ts  priority.ts  queue.ts
frontend/src/infra/: globalShortcut.ts
frontend/src/infra/audio/: AudioPlayer.ts
frontend/src/infra/danmu/: BiliOpenClient.ts  BiliWebClient.ts  DanmuClient.ts  status.ts
frontend/src/infra/storage/: crypto.ts  kv.ts  shared.ts
frontend/src/infra/tauri/: invoke.ts
frontend/src/services/: AuthService.ts  DanmuService.ts  MusicService.ts  PlayerService.ts  QueueService.ts
frontend/src/stores/: liveState.ts  notice.ts  queue.ts  session.ts  settings.ts  stats.ts
frontend/src/styles/: global.css
frontend/src/types/: danmu.ts  index.ts  live.ts  order.ts  song.ts
frontend/src/utils/: accent.ts  configBackup.ts  hotkey.ts  sanitize.ts  throttle.ts  toast.ts
