[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/bili-open",
    "crates/bili-web",
    "crates/bili-passport",
    "crates/music",
    "crates/server",
    "crates/app",
]

[workspace.package]
version = "0.1.0-beta.2"
edition = "2021"
rust-version = "1.75"
authors = ["dmx-man"]
license = "ISC"
repository = "https://gitee.com/dmx-man/order_song_yxm"

[workspace.dependencies]
# 异步运行时与 HTTP
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros", "json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace", "limit"] }
hyper = { version = "1", features = ["server"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "rustls-tls", "gzip", "brotli", "deflate", "zstd"] }
http = "1"
mime_guess = "2"

# 序列化与错误
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
anyhow = "1"

# 加密
hmac = "0.12"
sha2 = "0.10"
md-5 = "0.10"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
rsa = "0.9"
base64 = "0.22"
hex = "0.4"
rand = "0.8"

# 工具
url = "2"
uuid = { version = "1", features = ["v4"] }
moka = { version = "0.12", features = ["future"] }
once_cell = "1"
parking_lot = "0.12"
governor = "0.7"
async-trait = "0.1"
futures = "0.3"

# 同步阻塞 HTTP
ureq = "2"

# Tauri
tauri = { version = "2", features = ["tray-icon"] }
tauri-build = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
strip = true
