[package]
name = "ordersong-bili-open"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "鱼小曼点歌助手 HTTP 客户端"

[dependencies]
ordersong-core = { path = "../core" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
md-5 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
