[package]
name = "ordersong-bili-passport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "B 站扫码登录与身份码自动获取"

[dependencies]
ordersong-core = { path = "../core" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
